--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
   },
   "dependencies": {
     "amfe-flexible": "^2.2.1",
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "moment": "^2.26.0",
     "normalize.css": "^8.0.1",
+    "swiper": "^5.4.1",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.1.1",
+    "vue-lazyload": "^1.3.3",
+    "vue-preview": "^1.1.3",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
